:recycle: Make SonarLint happy